Documentation: - vulkan memory view page has been updated
core:
- vulkan loader Windows support
- Vulkan memory allocator Windows support
- Renderer refactoring
- OSUtils class has been added

--- a/app/src/main/cpp/include/vulkan_bootstrap.in
+++ b/app/src/main/cpp/include/vulkan_bootstrap.in
@@ -2,3 +2,4 @@ X ( vkCreateInstance )
 X ( vkEnumerateInstanceVersion )
 X ( vkEnumerateInstanceExtensionProperties )
 X ( vkEnumerateInstanceLayerProperties )
+X ( vkGetInstanceProcAddr )
