--- a/app/src/main/cpp/include/vulkan_instance.in
+++ b/app/src/main/cpp/include/vulkan_instance.in
@@ -1,4 +1,3 @@
-X ( vkCreateAndroidSurfaceKHR )
 X ( vkCreateDevice )
 X ( vkDestroyInstance )
 X ( vkDestroySurfaceKHR )
@@ -17,3 +16,13 @@ X ( vkGetPhysicalDeviceSurfaceCapabilitiesKHR )
 X ( vkGetPhysicalDeviceSurfaceFormatsKHR )
 X ( vkGetPhysicalDeviceSurfacePresentModesKHR )
 X ( vkGetPhysicalDeviceSurfaceSupportKHR )
+
+#if defined ( VK_USE_PLATFORM_ANDROID_KHR )
+
+#include "platform/android/vulkan_instance.in"
+
+#elif defined ( VK_USE_PLATFORM_WIN32_KHR )
+
+#include "platform/windows/vulkan_instance.in"
+
+#endif
